<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhonghong.hlbelogistics.core.home.Activitys.Bind_bank_Activity"
    android:background="@color/background"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_buyers_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/toolbar_background"
        toolbar:title="">
        <!--添加Toolbar的子控件-->
        <ImageView
            android:id="@+id/bank_Activity_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/x10"
            android:paddingTop="@dimen/y10"
            android:paddingBottom="@dimen/y10"
            android:src="@drawable/back" />
        <TextView
            android:id="@+id/exception_report_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="绑定银行卡"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/prompt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_tv"
        android:layout_below="@+id/bind_bank_toolbar"
        android:paddingTop="20dp"
        android:paddingLeft="20dp" />
    <View style="@style/bg_line"/>
    <LinearLayout
        android:id="@+id/bind_bank"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/tv"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/bank_number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:maxLines="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bind_bank_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bind_bank"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="农业银行—储蓄卡"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bind_bank_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/bind_bank_layout"
        android:background="@color/white"
       android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:maxLines="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/editText" />
    </LinearLayout>
    <View style="@style/bg_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/bind_bank_layout"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/id_card" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:maxLines="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>
    <View style="@style/bg_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/bind_bank_layout"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/phone_number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:maxLines="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>
    <View style="@style/bg_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/bind_bank_layout"
        android:gravity="center|center_horizontal|center_vertical"
        android:background="@color/white">
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:text="@string/button_tv"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>
