<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context="com.zhonghong.hlbelogistics.core.login.LoginActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_buyers_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y132"
        android:background="@color/toolbar_background"
        toolbar:title="">
        <!--添加Toolbar的子控件-->
        <ImageView
            android:id="@+id/registerActivity_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/x10"
            android:paddingTop="@dimen/y10"
            android:paddingBottom="@dimen/y10"
            android:src="@drawable/back" />
        <TextView
            android:id="@+id/exception_report_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:layout_marginTop="@dimen/y60"
                android:id="@+id/register_imageView"
                />

            <EditText
                android:id="@+id/register_phonenumber_editText"
                android:layout_width="@dimen/x787"
                android:layout_height="@dimen/y134"
                android:hint="@string/phone_num"
                android:textColorHint="@color/edit_hdit"
                android:textColor="@color/edit_hdit"
                android:background="@drawable/regist_edit_background"
                android:layout_marginTop="@dimen/y60"
                android:gravity="center"
                android:textSize="16sp"
                />
            <RelativeLayout
                android:layout_width="@dimen/x787"
                android:layout_height="@dimen/y134"
                android:layout_marginTop="@dimen/y60"
                android:gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/yanzheng_button"
                    android:layout_width="@dimen/x285"
                    android:layout_height="@dimen/y134"
                    android:background="@drawable/regist_btn"
                    android:text="@string/get_yzm"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    />

                <EditText
                    android:layout_width="@dimen/x448"
                    android:layout_height="@dimen/y134"
                    android:id="@+id/register_yanzheng_editText"
                    android:background="@drawable/regist_edit_background"
                    android:hint="@string/yzm"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>


            <EditText
                android:id="@+id/register_password_editText"
                android:layout_width="@dimen/x787"
                android:layout_height="@dimen/y134"
                android:layout_marginTop="@dimen/y60"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/edit_hdit"
                android:textColor="@color/edit_hdit"
                android:background="@drawable/regist_edit_background"
                android:gravity="center"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/y60"
                >
                <CheckBox
                    android:id="@+id/person_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="个人用户"
                    android:textColor="@color/blue"
                    android:layout_marginRight="@dimen/x45"
                    />
                <CheckBox
                    android:id="@+id/enterprise_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="企业用户"
                    android:textColor="@color/blue"
                    />
            </LinearLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_checkBox"
                android:text="《我已阅读并同意条款》"
                android:textColor="@color/blue"
                android:layout_marginTop="@dimen/y30"
                />

            <Button
                android:id="@+id/register_button"
                android:layout_width="@dimen/x787"
                android:layout_height="@dimen/y134"
                android:background="@drawable/regist_btn"
                android:text="@string/regist"
                android:layout_marginTop="@dimen/y50"
                android:textSize="20sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
