<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="20dp">
        <!--<RelativeLayout-->
            <!--android:id="@+id/bind_bank"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/y100"-->
            <!--android:gravity="center_vertical"-->
            <!--android:paddingRight="@dimen/x15"-->
            <!--android:paddingLeft="@dimen/x50"-->
            <!--&gt;-->
            <!--<TextView-->
                <!--style="@style/set_text_style"-->
                <!--android:text="@string/bind_bank"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:paddingTop="@dimen/y15"-->
                <!--android:paddingBottom="@dimen/y15"-->
                <!--android:paddingLeft="@dimen/x15"-->
                <!--android:paddingRight="@dimen/x15"-->
                <!--/>-->
            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/y15"-->
                <!--android:paddingBottom="@dimen/y15"-->
                <!--android:paddingLeft="@dimen/x15"-->
                <!--android:paddingRight="@dimen/x15"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:orientation="horizontal"-->
                <!--&gt;-->
                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="未绑定"-->
                    <!--android:textSize="15sp"-->
                    <!--android:textColor="@color/set_color"-->
                    <!--/>-->
                <!--<ImageView-->
                    <!--android:id="@+id/bind_bank_img"-->
                    <!--style="@style/set_imageview_style"-->
                    <!--android:layout_marginLeft="@dimen/x40"-->
                    <!--/>-->
            <!--</LinearLayout>-->

        <!--</RelativeLayout>-->
        <View style="@style/bg_line"
            android:layout_marginLeft="@dimen/x24"
            android:layout_marginRight="@dimen/x24"
            />

        <RelativeLayout
            android:id="@+id/zh_admin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/x15"
            android:paddingLeft="@dimen/x50"
            >

            <ImageView style="@style/set_imageview_style"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/y15"
                android:paddingBottom="@dimen/y15"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                />

            <TextView
                style="@style/set_text_style"
                android:text="@string/zh_admin"
                android:paddingTop="@dimen/y15"
                android:paddingBottom="@dimen/y15"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <View style="@style/bg_line"
            android:layout_marginLeft="@dimen/x24"
            android:layout_marginRight="@dimen/x24"
            />

        <RelativeLayout
            android:id="@+id/modify_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/x15"
            android:paddingLeft="@dimen/x50"
            >
            <TextView
                style="@style/set_text_style"
                android:text="@string/modify_pwd"
                android:layout_alignParentLeft="true"
                android:paddingTop="@dimen/y15"
                android:paddingBottom="@dimen/y15"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                />
            <ImageView style="@style/set_imageview_style"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/y15"
                android:paddingBottom="@dimen/y15"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                />
        </RelativeLayout>
        <View style="@style/bg_line"
            android:layout_marginLeft="@dimen/x24"
            android:layout_marginRight="@dimen/x24"
            />
        <RelativeLayout
            android:id="@+id/version_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/x15"
            android:paddingLeft="@dimen/x50"
            >
            <TextView
                style="@style/set_text_style"
                android:text="@string/version_info"
                android:layout_alignParentLeft="true"
                android:paddingTop="@dimen/y15"
                android:paddingBottom="@dimen/y15"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/y15"
                android:paddingBottom="@dimen/y15"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/set_color"
                    android:text="V4.0.1"
                    />
                <ImageView style="@style/set_imageview_style"
                    android:layout_marginLeft="@dimen/x40"
                    />
            </LinearLayout>

        </RelativeLayout>
        <View style="@style/bg_line"
            android:layout_marginLeft="@dimen/x24"
            android:layout_marginRight="@dimen/x24"
            />
        <Button
            android:layout_marginTop="@dimen/y55"
            android:id="@+id/cancelandback_btn"
            android:layout_width="@dimen/x671"
            android:layout_height="@dimen/y115"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancelandback"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/regist_btn"
            android:layout_marginBottom="@dimen/y65"
            />
    </LinearLayout>
</LinearLayout>